--- a/src/app/Styles/aboutme.css
+++ b/src/app/Styles/aboutme.css
@@ -38,9 +38,11 @@
     color: #33336B;
   }
   .head{
+
+  width: max-content;
     padding: 0px 20px;
 
-    background: linear-gradient(to right, #00006b, #0091ff); /* Gradient definition */
+    background: linear-gradient(to right, #000046, #0000AC); /* Gradient definition */
     -webkit-background-clip: text; /* Clipping background to text */
     -webkit-text-fill-color: transparent; /* Making text transparent to show the gradient */
         font-size: 64px;
